# number-recognizer

./: README.md  capture.py  display_utils.py  extract_digits.py  label.py  labels_new.json  live_feed.py  read_display.py  train_digit_cnn.py
display_marker/: package.xml  setup.cfg  setup.py
display_marker/display_marker/: display_marker_node.py
display_marker/launch/: display_marker.launch.py
display_reader/: CMakeLists.txt  package.xml  setup.cfg  setup.py
display_reader/display_reader/: display_reader_node.py  display_utils.py
display_reader/launch/: display_reader.launch.py
display_reader/models/: digit_cnn.tflite
display_reader/scripts/: display_reader_node
display_reader_msgs/: CMakeLists.txt  package.xml
models/: digit_cnn.keras
