<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>display_marker</name>
  <version>1.0.0</version>
  <description>ROS2 node that visualizes display readings as markers at robot positions.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>display_reader_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
